[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/warning.png" type="Texture" id=1]
[ext_resource path="res://Objects/Door_NHouse.gd" type="Script" id=2]
[ext_resource path="res://dialogues/dlg_normalhouse.tres" type="Resource" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 8.5 )

[node name="Door_NHouse" type="Area2D"]
script = ExtResource( 2 )
dialogue_resource = ExtResource( 3 )
dialogue_start_node = "dlg_normalhouse"

[node name="Spawn" type="Position2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Warning" type="Sprite" parent="."]
visible = false
position = Vector2( 19, -10 )
scale = Vector2( 0.0390625, 0.0415039 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Door_NHouse_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_NHouse_body_exited"]
